fix(conversation): harden reply suggestion resilience